# LinuxVulkan

./: CMakeLists copy.txt  CMakeLists.txt  CMakePresets copy.json  CMakePresets.json  README.md  main  main copy.cpp  main.cpp  tasksold.json
include/: buffered_reader.h  custom_format.h  warehouse.h
lessons/: buffered_reader.cpp  comment.cpp  context_actions.cpp  duplicate.cpp  file_structure.cpp  find_in_files.cpp  multiple_selection.cpp  quadratic_equations_solver.cpp  selection.cpp  unwrap.cpp
